Fixed left containers shifting to the right and over lapping

--- a/style.css
+++ b/style.css
@@ -80,12 +80,12 @@ a:hover {
 }
 
 /* Styles specific to the map page */
-
+/*
 #map {
     width: 800px; 
     height: 600px;
 }
-
+*/
 #color-legend {
     position: absolute;
     bottom: 30px; 
@@ -205,7 +205,7 @@ a:hover {
 
 .row-flex-container {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 }
 
 
